Group navigation tabs spacing fix
Reduce right margin for better fit.

--- a/css/1000.less
+++ b/css/1000.less
@@ -18,7 +18,7 @@
 	  			display: block;
 	  			padding-right: 8px;
 				padding-left: 8px;
-				margin-right: 2px;
+				// margin-right: 2px;
 				line-height: 20px;
 	  		}
 	  	}
