--- a/style-ie.css
+++ b/style-ie.css
@@ -4078,7 +4078,6 @@ div#item-header .activity {
   display: block;
   padding-right: 8px;
   padding-left: 8px;
-  margin-right: 2px;
   line-height: 20px;
 }
 .site #secondary .item-list-tabs {
